--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,5 +13,6 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16.x
+    - run: npm install
     - run: npm ci
     - run: npm test
